[gd_scene load_steps=3 format=3 uid="uid://d0ogjgvd3et1c"]

[ext_resource type="Script" uid="uid://ce43o6dhk7n8r" path="res://Scripts/list_card.gd" id="1_cplbl"]
[ext_resource type="Texture2D" uid="uid://dnmhppe8t8ufx" path="res://Assets/no-name.png" id="1_uo8ty"]

[node name="ListCard" type="Control"]
custom_minimum_size = Vector2(62, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 62.0
offset_bottom = 120.0
mouse_filter = 1
script = ExtResource("1_cplbl")

[node name="CardName" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 86.0
offset_right = 61.0
offset_bottom = 115.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 10
text = "Card Name teeee"
horizontal_alignment = 1

[node name="CardImage" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 751.0
offset_bottom = 1050.0
texture_normal = ExtResource("1_uo8ty")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="gui_input" from="CardImage" to="." method="_on_card_image_gui_input"]
[connection signal="mouse_entered" from="CardImage" to="." method="_on_card_image_mouse_entered"]
[connection signal="mouse_exited" from="CardImage" to="." method="_on_card_image_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
